Fixing overflow issue

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -51,6 +51,7 @@ body {
   color: $colour2;
   line-height: 29px;
   letter-spacing: 1px;
+  position: relative;
 }
 
 html,
